Fix(?) test